Fix previous web

--- a/src/map/index.html
+++ b/src/map/index.html
@@ -16,7 +16,7 @@
 		<div id="printoutPanel"></div>
   	<div id="map"></div>
 	</div>
-	<div id="loader" class="hidden"></div>
+	<div id="loader"></div>
 	<script type="text/javascript" src="index.js"></script>
 	<script type="text/javascript" src="https://www.bing.com/api/maps/mapcontrol?callback=loadMapScenario" async defer></script>
 </body>
